--- a/index.html
+++ b/index.html
@@ -31,24 +31,25 @@
         h2 {
             color: #4b0082;
             text-transform: capitalize;
-            font-family: 微軟正黑體;
+            font-family: "Noto Sans TC";
             font-weight: bolder
         }
 
         p {
             color: darkslategrey;
-            font-weight: 700
+            font-weight: 700;
+            font-family: "Noto Sans TC";
         }
 
         span {
             color: #6495ed;
-            font-family: 微軟正黑體;
+            font-family: "Noto Sans TC";
             font-size: 120%;
             font-weight: bolder
         }
 
         h3 {
-            font-family: 微軟正黑體;
+            font-family: "Noto Sans TC";
             font-size: 15px;
             line-height: 40px
         }
