--- a/foreignworker.html
+++ b/foreignworker.html
@@ -113,6 +113,30 @@
     <div id="main">
         <div class="container">
             <div class="row">
+                <header style="text-align:center;">
+                    <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
+                </header>
+
+                <div class="row">
+                    <div>
+                        <img src="images/chart3.jpg" width="400px" height="300px" alt="" />
+                        <p style="text-align:center;">圖(一)</p>
+                    </div>
+                    <div id="sideba" class="1u" style="padding-left: 0px;">
+                        <section>
+                            <header>
+                            </header>
+                            <ul class="style">
+                            </ul>
+                        </section>
+                    </div>
+                    <div>
+                        <img src="images/chart4.jpg" width="400px" height="300px" alt="" />
+                        <p style="text-align:center;">圖(二)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
 
                 <!-- Content -->
                 <div id="sideba" class="2u">
@@ -125,16 +149,8 @@
                 </div>
                 <div id="content" class="8u skel-cell-important">
                     <section>
-                        <header>
-                            <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
-                        </header>
-                        <div class="row">
-                            <a class="image full"><img src="images/chart3.jpg"  alt="" /></a>
-                            <p style="text-align:center;">圖(一)</p>
-                            <a class="image full"><img src="images/chart4.jpg"  alt="" /></a>
-                            <p style="text-align:center;">圖(二)</p>
-                        </div>
-                        <div class="row">
+
+                        <div class="row" style="background-color: aquamarine;">
                             <h3>由圖(一)可以看到彰化縣是除了六都以外，聘僱外籍看護最多的縣市，且也可以由圖(二)發現到其聘雇人數是逐年上升的，明顯了解外籍移工是彰化縣看護人力的重要來源。</h3>
                         </div>
                         <br><br><br>
@@ -164,10 +180,6 @@
 
                 </div>
 
-                <!-- Sidebar -->
-                <div id="sidebar" class="1u">
-
-                </div>
             </div>
         </div>
     </div>
