--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+
 </head>
 
 <body class="homepage">
@@ -166,21 +167,16 @@
     <!--中間區塊-->
     <div id="featured" style="padding-top: 50px">
         <div class="container">
-            <div id="sidebar" class="2u">
-                <section>
-                    <header>
-                    </header>
-                    <ul class="style">
-                    </ul>
-                </section>
-            </div>
             <p class="posted" style="font-size: 24px;font-weight: 700;text-align:center;">長期照顧面臨問題</p>
             <div class="row">
 
+
                 <div class="4u">
-                    <a class="image full"><img src="images/picture3.JPG" height=255px alt="" /></a>
-                    <p class="posted">政府喊口號，長照機構究竟夠不夠</p>
-                    <h3>長照由原本的長照1.0進階為長照2.0，以「找得到、看得到、用得到」為目標，擴大服務對象、增加服務項目並在服務單位掛上掛牌，希望可以讓更多人受惠、減少民眾負擔。</h3>
+                    <div class="" onmouseover="change(this)" onmouseout="nochange(this)" style="cursor: pointer;" ; onclick="location.href='about.html';">
+                        <a class="image full"><img src="images/picture3.JPG" height=255px alt="" /></a>
+                        <p class="posted">政府喊口號，長照機構究竟夠不夠</p>
+                        <h3>長照由原本的長照1.0進階為長照2.0，以「找得到、看得到、用得到」為目標，擴大服務對象、增加服務項目並在服務單位掛上掛牌，希望可以讓更多人受惠、減少民眾負擔。</h3>
+                    </div>
                 </div>
 
                 <div class="4u">
@@ -210,107 +206,107 @@
                 <br><br>
 
                 <!-- Content -->
-                <div id="content" class="12u">
+                <div id="content ">
                     <section>
                         <header>
                         </header>
-                        <div class="row">
-                            <div class="3u">
+                        <div class="row ">
+                            <div class="4u ">
 
-                                <a class="image full"><img src="images/picture8.jpg"  alt="" /></a>
-                                <p class="posted">長照機構增設！政府可以給什麼幫助？</p>
+                                <a class="image full "><img src="images/picture8.jpg "  alt=" " /></a>
+                                <p class="posted ">長照機構增設！政府可以給什麼幫助？</p>
                                 <h3>彰化縣老年人口已達彰化縣人口之14.21%，成為「高齡社會」，因此彰化縣政府</h3>
                             </div>
-                            <div class="3u">
-                                <a class="image full"><img src="images/picture7.jpg"  alt="" /></a>
-                                <p class="posted">外籍看護問題，到底該如何解決？</p>
+                            <div class="4u ">
+                                <a class="image full "><img src="images/picture7.jpg "  alt=" " /></a>
+                                <p class="posted ">外籍看護問題，到底該如何解決？</p>
                                 <h3>為了預防彰化面臨照護人員短缺的問題，首先要想辦法留住外籍看護，因為其為彰化的主要看謢人員來源，接著彰化要在本身地區，培育專屬於地方的長照人員，並且根據每個鄉鎮市的需求，給予不一樣的長照訓練，有著專業化的長照人員。</h3>
                             </div>
-                            <div class="3u">
-                                <a class="image full"><img src="images/picture6.jpg" alt="" /></a>
-                                <p class="posted">對於照服員不足，我們需要什麼？</p>
+                            <div class="4u ">
+                                <a class="image full "><img src="images/picture6.jpg " alt=" " /></a>
+                                <p class="posted ">對於照服員不足，我們需要什麼？</p>
                                 <h3></h3>
                             </div>
                         </div>
-                        <p><br><br><br></p>
+                        <p><br></p>
                     </section>
                 </div>
-
-
-
-                <!-- Footer -->
-                <div id="footer">
-                    <div class="container">
-                        <div class="row">
-                            <div class="4u">
-                                <section>
-                                    <h2>External links</h2>
-                                    <ul class="default">
-                                        <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
-                                        <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
-                                        <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
-                                    </ul>
-                                </section>
-                            </div>
-                            <div class="4u">
-                                <section>
-                                    <h2 style="padding-left: 20px">About Us</h2>
-                                    <table CELLPADDING=50 border=10>
-                                        <tr align="center">
-                                            <td width=150>
-                                                <a href="#" class="image"><img src="images/臻.png" ></a>
-                                                <h1 style="color:#FFF">劉宜臻</h1>
-                                            </td>
-                                            <td width=150>
-                                                <a href="#" class="image"><img src="images/cha.PNG" ></a>
-                                                <h1 style="color:#FFF">劉家樺</h1>
-                                            </td>
-                                        </tr>
-                                        <tr align="center">
-                                            <td width=100>
-                                                <a href="#" class="image"><img src="images/翊.png" ></a>
-                                                <h1 style="color:#FFF">李翊嘉</h1>
-                                            </td>
-                                            <td width=100>
-                                                <a href="#" class="image"><img src="images/康.png" ></a>
-                                                <h1 style="color:#FFF">康益豪</h1>
-                                            </td>
-                                        </tr>
-                                    </table>
-
-                                </section>
-                            </div>
-                            <section class="4u">
-                                <div class="container">
-                                    <h2>Contact Us</h2>
-                                </div>
-                                <ul class="tabular">
-                                    <li>
-                                        <h1>Address</h1>
-                                        <p>No.151, Daxue Rd., Sanxia Dist., New Taipei City 237, Taiwan</p>
-                                    </li>
-                                    <li>
-                                        <h3>Mail</h3>
-                                        <p href="#">candy860527@gmail.com</p>
-                                    </li>
-                                    <li>
-                                        <h3>Phone</h3>
-                                        <p>0988728723</p>
-                                    </li>
-                                </ul>
-                            </section>
-                        </div>
-                    </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer -->
+    <div id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="4u">
+                    <section>
+                        <h2>External links</h2>
+                        <ul class="default">
+                            <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
+                            <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
+                            <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                        </ul>
+                    </section>
                 </div>
+                <div class="4u">
+                    <section>
+                        <h2 style="padding-left: 20px">About Us</h2>
+                        <table CELLPADDING=50 border=10>
+                            <tr align="center">
+                                <td width=150>
+                                    <a href="#" class="image"><img src="images/臻.png" ></a>
+                                    <h1 style="color:#FFF">劉宜臻</h1>
+                                </td>
+                                <td width=150>
+                                    <a href="#" class="image"><img src="images/cha.PNG" ></a>
+                                    <h1 style="color:#FFF">劉家樺</h1>
+                                </td>
+                            </tr>
+                            <tr align="center">
+                                <td width=100>
+                                    <a href="#" class="image"><img src="images/翊.png" ></a>
+                                    <h1 style="color:#FFF">李翊嘉</h1>
+                                </td>
+                                <td width=100>
+                                    <a href="#" class="image"><img src="images/康.png" ></a>
+                                    <h1 style="color:#FFF">康益豪</h1>
+                                </td>
+                            </tr>
+                        </table>
 
-
-                <!-- Copyright -->
-                <div id="copyright">
-                    <div class="container">
-                        Design: <a href="#">女孩當自強</a>
-                    </div>
-
+                    </section>
                 </div>
+                <section class="4u">
+                    <div class="container">
+                        <h2>Contact Us</h2>
+                    </div>
+                    <ul class="tabular">
+                        <li>
+                            <h1>Address</h1>
+                            <p>No.151, Daxue Rd., Sanxia Dist., New Taipei City 237, Taiwan</p>
+                        </li>
+                        <li>
+                            <h3>Mail</h3>
+                            <p href="#">candy860527@gmail.com</p>
+                        </li>
+                        <li>
+                            <h3>Phone</h3>
+                            <p>0988728723</p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Copyright -->
+    <div id="copyright">
+        <div class="container">
+            Design: <a href="#">女孩當自強</a>
+        </div>
+
+    </div>
 
 
 </body>
