--- a/foreignworker.html
+++ b/foreignworker.html
@@ -112,14 +112,20 @@
     <!-- Main -->
     <div id="main">
         <div class="container">
+          <header style="text-align:center;">
+              <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
+          </header>
             <div class="row">
-                <header style="text-align:center;">
-                    <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
-                </header>
-
-                <div class="row">
+              <div id="sideba" class="1u" style="padding-left: 0px;">
+                  <section>
+                      <header>
+                      </header>
+                      <ul class="style">
+                      </ul>
+                  </section>
+              </div>
                     <div>
-                        <img src="images/chart3.jpg" width="400px" height="300px" alt="" />
+                        <img src="images/chart3.jpg" width="400px" height="300px" alt=""/>
                         <p style="text-align:center;">圖(一)</p>
                     </div>
                     <div id="sideba" class="1u" style="padding-left: 0px;">
@@ -131,10 +137,10 @@
                         </section>
                     </div>
                     <div>
-                        <img src="images/chart4.jpg" width="400px" height="300px" alt="" />
+                        <img src="images/chart4.jpg" width="400px" height="300px" alt=""/>
                         <p style="text-align:center;">圖(二)</p>
                     </div>
-                </div>
+
             </div>
             <div class="row">
 
