改好圖表位置以及文字對齊
調整的部分多是如何創造空間，並且將不適合的設定拿掉，然後必要的時候用sideba去擠壓相對位置。

以下是主要幾個設定，都可以用Chrome的檢查瀏覽到有些padding/margin在這邊想要的排版環境是多餘了，所以將其拿掉

<div class="row" style="margin-left: 0px;">

<div style="padding-left: 0px;">

 <section style="margin: auto;">

--- a/foreignworker.html
+++ b/foreignworker.html
@@ -112,21 +112,28 @@
     <!-- Main -->
     <div id="main">
         <div class="container">
-          <header style="text-align:center;">
+          <header style="margin: auto;">
               <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">人權問題！外籍看護權力影響長照人力資源</p>
           </header>
-            <div class="row">
-              <div id="sideba" class="1u" style="padding-left: 0px;">
-                  <section>
-                      <header>
-                      </header>
-                      <ul class="style">
-                      </ul>
-                  </section>
-              </div>
-                    <div>
-                        <img src="images/chart3.jpg" width="400px" height="300px" alt=""/>
+            <div class="row" style="margin-left: 0px;">
+
+                    <div style="padding-left: 0px;">
+                        <img src="images/chart3.jpg" width="550px" height="400px" alt=""/>
                         <p style="text-align:center;">圖(一)</p>
+                    </div>
+
+                    <div id="sideba" class="1u" style="padding-left: 0px;">
+                        <section>
+                            <header>
+                            </header>
+                            <ul class="style">
+                            </ul>
+                        </section>
+                    </div>
+
+                    <div style="padding-left: 0px;">
+                        <img src="images/chart4.jpg" width="550px" height="400px" alt=""/>
+                        <p style="text-align:center;">圖(二)</p>
                     </div>
                     <div id="sideba" class="1u" style="padding-left: 0px;">
                         <section>
@@ -136,12 +143,9 @@
                             </ul>
                         </section>
                     </div>
-                    <div>
-                        <img src="images/chart4.jpg" width="400px" height="300px" alt=""/>
-                        <p style="text-align:center;">圖(二)</p>
-                    </div>
 
             </div>
+
             <div class="row">
 
                 <!-- Content -->
@@ -154,7 +158,7 @@
                     </section>
                 </div>
                 <div id="content" class="8u skel-cell-important">
-                    <section>
+                    <section style="margin: auto;">
 
                         <div class="row" style="background-color: aquamarine;">
                             <h3>由圖(一)可以看到彰化縣是除了六都以外，聘僱外籍看護最多的縣市，且也可以由圖(二)發現到其聘雇人數是逐年上升的，明顯了解外籍移工是彰化縣看護人力的重要來源。</h3>
